--- a/src/style.css
+++ b/src/style.css
@@ -9,15 +9,15 @@
 html {
   height: 100vh;
   width: 100vw;
-  padding: 0%;
-  margin: 0%;
+  padding: 0 0;
+  margin: 0 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 body {
   height: 100%;
-  margin: 0%;
+  margin: 0 0;
   padding: 1em;
   display: grid;
   grid-template-columns: 1fr;
@@ -45,6 +45,7 @@ main section#todayInfo #details {
     "temp temp details . . .";
 
   letter-spacing: 0.1em;
+  padding-bottom: 2em;
 }
 
 main section#todayInfo #details div.temps {
@@ -121,4 +122,17 @@ span.dark {
 svg {
   max-width: 6em;
   max-height: 6em;
+}
+
+/*GRAPH*/
+section#graps {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+canvas#chart {
+  width: 95vw;
+  max-height: 30vh;
 }
