--- a/src/style.css
+++ b/src/style.css
@@ -62,7 +62,7 @@ main section#weatherToogler article:hover {
 }
 
 header form input[type="text"] {
-  padding: 0.5em;
+  padding: 0.25em 0.5em;
   font-size: 1rem;
   letter-spacing: 0.1em;
   background-color: transparent;
